--- a/src/Makefile
+++ b/src/Makefile
@@ -9,8 +9,11 @@ strlen_tests : clean
 
 strcmp_tests : clean
 	$(CC) $(CFLAGS) -D STRCMP s21_string.c s21_string_test.c -o $(BUILD_DIR)/Quest_2
+
+strcpy_tests : clean
+	$(CC) $(CFLAGS) -D STRCPY s21_string.c s21_string_test.c -o $(BUILD_DIR)/Quest_3
 	
 clean:
 	rm -f ./*.o
-	rm -f $(BUILD_DIR)/Quest_1
+	rm -f $(BUILD_DIR)/Quest*
 
